# share.it-django

./: .gitignore  manage.py
shareit/: MANIFEST.in  README.md  docker-compose.dev.yaml  pyproject.toml  requirements-format.txt  requirements-test.in  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
shareit/src/shareit/: admin.py  models.py  urls.py  views.py
shareit/src/shareit/migrations/: 0001_initial.py
shareit/src/shareit/templates/: resource_access.html  resource_create.html  resource_created.html  resource_detail.html
sharenet/: asgi.py  settings.py  urls.py  wsgi.py
